trunk/Archive2/42/4eddc9262c1e5d/output
main.cpp: In constructor 'M::M()':
main.cpp:4:11: error: 'f' was not declared in this scope
         f();
           ^
